:arrow_down: downgrade angular version

--- a/quorum-technical-test/src/app/app.component.html
+++ b/quorum-technical-test/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-bill-by-legislator-view></app-bill-by-legislator-view>
+<div>
+  <p>deu bom</p>
+  <p>{{ csvData }}</p>
+</div>
 <router-outlet />
